...
<LinearLayout
    android:id="@+id/reg_comunidad_layout"
    style="@style/baseLayout.withPadding"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <Spinner
        android:id="@+id/tipo_via_spinner"
        style="@style/spinnerBase">
    </Spinner>

    <EditText
        android:id="@+id/comunidad_nombre_via_editT"
        style="@style/textBase.editField"
        android:hint="@string/nombre_via_hint"
        android:inputType="textCapWords|textNoSuggestions"
        android:maxEms="80"/>

    <LinearLayout
        android:id="@+id/comunidad_number_sufix_edit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/comunidad_numero_editT"
            style="@style/textBase.editField"
            android:hint="@string/numero_en_via"
            android:inputType="number"
            android:maxEms="6"
        />

        <EditText
            android:id="@+id/comunidad_sufijo_numero_editT"
            style="@style/textBase.editField"
            android:hint="@string/sufijo_numero_en_via_hint"
            android:inputType="textNoSuggestions"
            android:maxEms="6"
        />
    </LinearLayout>

    <Spinner
        android:id="@+id/autonoma_comunidad_spinner"
        style="@style/spinnerBase"
    />

    <Spinner
        android:id="@+id/provincia_spinner"
        style="@style/spinnerBase"
    />

    <Spinner
        android:id="@+id/municipio_spinner"
        style="@style/spinnerBase"
    />
</LinearLayout>
