...
    <android.support.design.widget.CoordinatorLayout
        style="@style/baseLayout"
        xmlns:android="http://schemas.android.com/apk/res/android">

        <include layout="@layout/appbar_include_design"/>

        <LinearLayout android:id="@+id/comu_data_ac_layout"
                      style="@style/baseLayout"
                      xmlns:tools="http://schemas.android.com/tools"
                      android:layout_marginTop="@dimen/app_bar_bottom_margin">

            <fragment
                android:id="@+id/reg_comunidad_frg"
                android:name="com.didekindroid.comunidad.RegComuFr"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                tools:layout="@layout/reg_comu_fr"/>

            <Button
                android:id="@+id/comu_data_ac_button"
                style="@style/textBase.acButton1"
                android:layout_gravity="center_horizontal"
                android:text="@string/comu_data_ac_button_txt"
            />
        </LinearLayout>

...
